tests/snapshots/tests__pre_reduce_run@stress_tests__boom.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/boom.hvmc
---
(a (* a))
pre-reduce:
RWTS   :     134_217_925
- ANNI :      33_554_556
- COMM :      67_108_895
- ERAS :      16_777_216
- DREF :      16_777_258
- OPER :               0
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
