tests/snapshots/tests__pre_reduce_run@stress_tests__burn.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/burn.hvmc
---
(((@brnZ @brnZ) ((* @E) (* @E))) (((* @E) (* @E)) ((* @E) (* @E))))
pre-reduce:
RWTS   :      18_350_176
- ANNI :      10_485_759
- COMM :              44
- ERAS :       5_242_861
- DREF :       2_621_512
- OPER :               0
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
