tests/snapshots/tests__pre_reduce_run@stress_tests__sum_rec.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_rec.hvm
---
#67108864
pre-reduce:
RWTS   :              13
- ANNI :               7
- COMM :               0
- ERAS :               0
- DREF :               6
- OPER :               0
run:
RWTS   :     671_088_637
- ANNI :     201_326_591
- COMM :      67_108_863
- ERAS :     134_217_727
- DREF :      67_108_866
- OPER :     201_326_590
