tests/snapshots/tests__pre_reduce_run@stress_tests__sum_rec.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_rec.hvmc
---
#67108864
pre-reduce:
RWTS   :              13
- ANNI :               7
- COMM :               0
- ERAS :               0
- DREF :               6
- OPER :               0
run:
RWTS   :     603_979_771
- ANNI :     201_326_591
- COMM :      67_108_863
- ERAS :     134_217_727
- DREF :               0
- OPER :     201_326_590
