tests/snapshots/tests__pre_reduce_run@stress_tests__sum_tree.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_tree.hvmc
---
#16777216
pre-reduce:
RWTS   :     436_207_629
- ANNI :     167_772_167
- COMM :      83_886_075
- ERAS :     100_663_292
- DREF :      33_554_449
- OPER :      50_331_646
run:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
